--- a/index.html
+++ b/index.html
@@ -162,6 +162,6 @@
         </ul>
       </div>
     </div>
-    <script src="./index.html"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
